Added faker gem + seeds

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<%# IF user.provider %>
+<%# Display next bookings, create_service action %>
+<%# IF user.provider == false %>
+<%# Display next bookings, create_service action, previous bookings (-> reviews), suggested services ? %>
