--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,2 +1,25 @@
 <h1>Services#index</h1>
-<p>Find me in app/views/services/index.html.erb</p>
+<div class="services-query-form">
+  <h2> Filtering search bar goes here </h2>
+</div>
+
+<div class="services-content-container">
+  <div class="services-container row row-cols-1 row-cols-md-4 g-4">
+  <% @services.each do |service| %>
+    <div class="col">
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title"><%= service.title %></h5>
+          <h4 class="card-service-provider"><%= "#{service.user.first_name} #{service.user.last_name}" %></h4>
+          <p class="card-text"><%= service.address %></p>
+          <b class="card-service-price"><%= service.price %>€</b>
+        </div>
+      </div>
+    </div>
+  <% end %>
+  </div>
+  <div class="services-map-container">
+    <h2>Map goes here</h2>
+  </div>
+</div>
