Added dotenv-rails gem

--- a/app/assets/stylesheets/pages/_services_index.scss
+++ b/app/assets/stylesheets/pages/_services_index.scss
@@ -17,3 +17,9 @@
 .services-map-container {
   border: 2px solid grey;
 }
+
+.card-link-to-service {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
