--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -3,11 +3,14 @@
   <h2> Filtering search bar goes here </h2>
 </div>
 
+<%# <%= cl_image_tag @user.photo.key, crop: :fill %> %>
+
 <div class="services-content-container">
   <div class="services-container row row-cols-1 row-cols-md-4 g-4">
   <% @services.each do |service| %>
     <div class="col">
-      <div class="card">
+      <div class="card" style="position: relative;">
+        <%= link_to "", service_path(service), class: "card-link-to-service" %>
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title"><%= service.title %></h5>
