--- a/app/assets/stylesheets/pages/_services_index.scss
+++ b/app/assets/stylesheets/pages/_services_index.scss
@@ -23,3 +23,27 @@
   width: 100%;
   height: 100%;
 }
+
+.card-service-provider-image {
+  height: 200px;
+}
+
+.card-title-and-tags {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.tag-icon {
+  border: 1px solid black;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+}
+
+.card-price-and-details-btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
