Index filtering almost finished

--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,76 +1,54 @@
 <h1>Services#index</h1>
-<div class="services-queries" data-controller="filtered-queries">
-  <div class="services-query-form" >
-    <%= form_with url: services_path, method: :get, data: { filtered_queries_target: "query", action: "submit->filtered-queries#filter" }, class: "d-flex" do %>
-        <%= text_field_tag :query,
-              params[:query],
-              class: "form-control",
-              placeholder: "Type a keyword"
-          %>
-        <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
-      <% end %>
-  </div>
-  <div class="filter-buttons-container">
-    <button class="filter-dog-button" data-action="click->filtered-queries#highlight" data-filtered-queries-dog-value="">
-      dog
-      <%# fontawesome_icon %>
-    </button>
-    <button class="filter-cat-button" data-action="click->filtered-queries#highlight" data-filtered-queries-cat-value="">
-      cat
-      <%# fontawesome_icon %>
-    </button>
-    <button class="filter-kangaroo-button" data-action="click->filtered-queries#highlight" data-filtered-queries-kangaroo-value="">
-      kang
-      <%# fontawesome_icon %>
-    </button>
-    <button class="filter-rabbit-button" data-action="click->filtered-queries#highlight" data-filtered-queries-rabbit-value="">
-      rabbit
-      <%# fontawesome_icon %>
-    </button>
-    <button class="filter-ferret-button" data-action="click->filtered-queries#highlight" data-filtered-queries-ferret-value="">
-      ferret
-      <%# fontawesome_icon %>
-    </button>
-    <button class="filter-snake-button" data-action="click->filtered-queries#highlight" data-filtered-queries-snake-value="">
-      snake
-      <%# fontawesome_icon %>
-    </button>
-    <button class="filter-guinea-pig-button" data-action="click->filtered-queries#highlight" data-filtered-queries-pig-value="">
-      piggy
-      <%# fontawesome_icon %>
-    </button>
-  </div>
-</div>
-
-<div class="services-content-container">
-  <div class="services-container row row-cols-1 row-cols-md-2 g-4">
-  <% @services.each do |service| %>
-    <div class="col">
-      <div class="card" style="position: relative;">
-        <%#= link_to "", service_path(service), class: "card-link-to-service" %>
-        <% service.user.photos.each do |photo| %>
-          <%= cl_image_tag photo.key, background: 'black', aspect_ratio: '2.0', crop: :crop, class: "card-service-provider-image" %>
+<div class="container" data-controller="filtered-queries">
+  <div class="services-queries">
+    <div class="services-query-form" >
+      <%= form_with url: services_path, method: :get, data: { filtered_queries_target: "query", action: "submit->filtered-queries#filter" }, class: "d-flex" do %>
+          <%= text_field_tag :query,
+                params[:query],
+                class: "form-control",
+                placeholder: "Type a keyword"
+            %>
+          <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
         <% end %>
-        <div class="card-body">
-          <div class="card-title-and-tags">
-            <h5 class="card-title" style="margin-bottom: 0;"><%= service.title.capitalize %></h5>
-            <ul class="list-inline">
-              <li class="list-inline-item tag-icon"><i class="fa-solid fa-dog"></i></li>
-              <li class="list-inline-item tag-icon"><i class="fa-solid fa-cat"></i></li>
-            </ul>
-          </div>
-          <h5 class="card-service-provider"><%= "#{service.user.first_name} #{service.user.last_name}" %></h5>
-          <p class="card-text"><%= service.address %></p>
-          <div class="card-price-and-details-btn">
-            <b class="card-service-price"><%= service.price %>€</b>
-            <%= link_to "see details", service_path(service), class: "btn btn-primary"%>
-          </div>
-        </div>
-      </div>
     </div>
-  <% end %>
+    <div class="filter-buttons-container">
+      <button class="filter-dog-button" data-action="click->filtered-queries#highlight" data-filtered-queries-dog-value="">
+        dog
+        <%# fontawesome_icon %>
+      </button>
+      <button class="filter-cat-button" data-action="click->filtered-queries#highlight" data-filtered-queries-cat-value="">
+        cat
+        <%# fontawesome_icon %>
+      </button>
+      <button class="filter-kangaroo-button" data-action="click->filtered-queries#highlight" data-filtered-queries-kangaroo-value="">
+        kang
+        <%# fontawesome_icon %>
+      </button>
+      <button class="filter-rabbit-button" data-action="click->filtered-queries#highlight" data-filtered-queries-rabbit-value="">
+        rabbit
+        <%# fontawesome_icon %>
+      </button>
+      <button class="filter-ferret-button" data-action="click->filtered-queries#highlight" data-filtered-queries-ferret-value="">
+        ferret
+        <%# fontawesome_icon %>
+      </button>
+      <button class="filter-snake-button" data-action="click->filtered-queries#highlight" data-filtered-queries-snake-value="">
+        snake
+        <%# fontawesome_icon %>
+      </button>
+      <button class="filter-guinea-pig-button" data-action="click->filtered-queries#highlight" data-filtered-queries-pig-value="">
+        piggy
+        <%# fontawesome_icon %>
+      </button>
+    </div>
   </div>
-  <div class="services-map-container">
-    <h2>Map goes here</h2>
+
+  <div class="services-content-container">
+    <div class="services-container row row-cols-1 row-cols-md-2 g-4" data-filtered-queries-target="services">
+      <%= render "services", services: @services %>
+    </div>
+    <div class="services-map-container">
+      <h2>Map goes here</h2>
+    </div>
   </div>
 </div>
