--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,11 @@
 /* Specific CSS for your home-page */
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 .banner {
+  height: 710px;
   background-size: cover;
   background-position: center;
   padding: 250px 0; /* Increased padding for more height */
