--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -49,7 +49,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- Service Description Column -->
     <div class="col-md-8 d-flex">
       <div class="card shadow flex-fill" style="border-radius: 15px;">
@@ -78,7 +78,8 @@
           <%= simple_form_for([@service, @service.bookings.new], wrapper: :vertical_form, html: { class: 'form-horizontal' }) do |f| %>
             <div class="form-row">
               <div class="form-group col-md-8">
-                <%= f.input :start_time, as: :datetime, label: 'Choose a date', input_html: { class: 'form-control' }, wrapper_html: { class: 'mb-3' }, minute_step: 30 %>
+                <%= f.input :date, as: :string, label: 'Choose a date', input_html: { data: { controller: "datepicker" } }, wrapper_html: { class: 'mb-3' }, minute_step: 30 %>
+                <%= f.input :start_time, as: :time, label: 'Choose a time', input_html: { class: 'form-control' }, wrapper_html: { class: 'mb-3' }, minute_step: 30 %>
               </div>
             </div>
             <%= f.button :submit, "Book Now", class: "btn btn-primary btn-lg btn-block" %>
